cabal-version:       >=1.10
name:                import-issues-cabal
version:             0.1.0.0
author:              Martijn Bastiaan
maintainer:          martijn@hmbastiaan.nl
build-type:          Simple

library
  exposed-modules:     Library
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

test-suite import-issues
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  build-depends:       base, process, import-issues-cabal, extra
  default-language:    Haskell2010
