cabal-version:       >=1.10
name:                import-issues
version:             0.1.0.0
author:              Martijn Bastiaan
maintainer:          martijn@hmbastiaan.nl
build-type:          Simple

library
  exposed-modules:     Library
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

library extra
  exposed-modules:     LibraryExtra
  hs-source-dirs:      src
  build-depends:       base
  default-language:    Haskell2010

executable import-issues
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base, process, import-issues, extra
  default-language:    Haskell2010
